enviar datos al controlador - formulario

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -24,3 +24,24 @@ a,a:visited{
 #logo{
     font-size: 1.2em;
 }
+.field{
+    margin-top: 1em;
+}
+.form-control{
+    border:none;
+    border-bottom: 1px solid;
+    outline: none;
+    width: 100%;
+    display: block;
+    padding: 10px 0px;
+    font-size: 1.2em
+}
+.btn{
+    /*background-color: inherit;*/
+    border:none;
+    outline: none;
+    text-transform: uppercase;
+    cursor: pointer;
+    font-size: 1.2em;
+    padding: 10px 12px;
+}
