--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,6 +5,6 @@
 <% @articles.each do |article| %>
     <h1><%= article.title  %></h1>
     <div>
-        <%= article.body %>
+        <%= article.body %> - <%= link_to "Eliminar", article, data: { "turbo-method": :delete }%>
     </div>
 <%end%>
