--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,17 +1,20 @@
 <div style = "width:80%; margin:0 auto">
-
     <h1>Crear Artículo </h1>
-
-    <%= form_for(@article) do |f| %>
-    <!-- form_for: crea un formulario -->
-    <div class="field">
-        <%= f.text_field :title, placeholder: "Título", class: "form-control" %>
-    </div>
-    <div class="field">
-        <%= f.text_area :body, placeholder: "Escribe aquí el artículo", style: "height: 300px", class: "form-control" %>
-    </div>
-    <div class="filed">
-        <%= f.submit "Guardar", class:"btn be-red white" %>
-    </div>
+    <%= form_for(@article) do |f| %>        
+        <% @article.errors.full_messages.each do |message| %>
+            <div class="be-red white top.space">
+                * <%= message %>
+            </div>
+        <%end%>
+        <!-- form_for: crea un formulario -->
+        <div class="field">
+            <%= f.text_field :title, placeholder: "Título", class: "form-control" %>
+        </div>
+        <div class="field">
+            <%= f.text_area :body, placeholder: "Escribe aquí el artículo", style: "height: 300px", class: "form-control" %>
+        </div>
+        <div class="filed">
+            <%= f.submit "Guardar", class:"btn be-red white" %>
+        </div>
     <%end%>
 </div>
