--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -3,6 +3,9 @@ html, body{
     font-family: 'Open Sans', sans-serif;
 }
 
+.red{
+    color: #e74c3c !important;
+}
 .be-red{
     background-color: #e74c3c
 }
