--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,8 +3,8 @@
 <!-- inspect es para inspeccionar un objeto>-->
 
 <% @articles.each do |article| %>
-    <h1><%= article.title  %></h1>
+    <h1><%= link_to article.title, article  %></h1>
     <div>
-        <%= article.body %> - <%= link_to "Eliminar", article, data: { "turbo-method": :delete }%>
+        <%= article.body %> - <%= link_to "Eliminar", article, data: { "turbo-method": :delete }, class:"red"%>
     </div>
 <%end%>
